--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
-/* Your CSS Code here. */
+.main{
+	width : 200px;
+	background : purple;
+	  border-style: solid;
+	border-left-width : 5px;
+  border-left-color: green;
+	padding : 10px;
+}
+
+.heading{
+	font-size : 20px;
+	color : white;
+	text-decoration : underline;
+}
